<resources>
    <string name="app_name">Encrypt It</string>

    <string name="select_contact_hint">Enter the contact name</string>
    <string name="edit_text_hint">Type your message or paste an encrypted text. Triple-tap here to quickly paste and decrypt.</string>
    <string name="encrypt_button">Encrypt</string>
    <string name="decrypt_button">Decrypt</string>

    <string name="show_keys_menu_button">Show My Public Key</string>
    <string name="add_contact_menu_button">Add Contact</string>
    <string name="remove_contact_menu_button">Remove Contact</string>
    <string name="action_export_keys">Export Keys</string>
    <string name="action_import_keys">Import Keys</string>
    <string name="action_export_contacts">Export Contacts</string>
    <string name="action_import_contacts">Import Contacts</string>

    <string name="contact_name_hint">Contact Name</string>
    <string name="public_key_hint">Public Key</string>

    <string name="add_new_contact_alertdialog_title">Add New Contact</string>
    <string name="button_save">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="add_new_contact_toast_1">Contact Name and Public Key cannot be empty.</string>
    <string name="add_new_contact_toast_2">Contact has been added!</string>

    <string name="remove_contact_alertdialog_title">Remove Contacts</string>
    <string name="remove_contact_remove_button">Remove</string>
    <string name="remove_contact_cancel_button">Cancel</string>
    <string name="remove_contact_toast_1">No contacts selected!</string>
    <string name="remove_contact_toast_2">contact(s) removed!</string>

    <string name="remove_contact_confirm_alertdialog_title">Confirm Removal</string>
    <string name="remove_contact_confirm_alertdialog_message_1">Are you sure you want to remove</string>
    <string name="remove_contact_confirm_alertdialog_message_2">contact(s)?</string>
    <string name="remove_contact_confirm_alertdialog_yes">Yes</string>
    <string name="remove_contact_confirm_alertdialog_no">No</string>

    <string name="public_key_alertdialog_error_title">Error</string>
    <string name="public_key_alertdialog_error_message">Key pair not initialized!</string>
    <string name="public_key_alertdialog_error_ok">OK</string>

    <string name="public_key_alertdialog_title">My Public Key</string>
    <string name="public_key_alertdialog_copy_button">Copy</string>
    <string name="public_key_alertdialog_close_button">Close</string>
    <string name="public_key_alertdialog_toast">Public key copied to clipboard!</string>

    <string name="key_generation_failed_toast">Key generation failed:</string>
    <string name="select_a_contact_first_toast">Select a contact first!</string>
    <string name="decryption_failed_toast">Decryption failed:</string>
    <string name="no_contacts_to_remove_toast">No contacts to remove!</string>
    <string name="encrypted_message_copied_to_clipboard_toast">Encrypted message copied to clipboard!</string>
    <string name="encryption_failed_toast">Encryption failed:</string>

    <string name="generate_rsa_key_pair_hint">Enter encryption password</string>
    <string name="generate_rsa_key_pair_builder_title">Set Private Key Password</string>
    <string name="generate_rsa_key_pair_builder_toast_1">Password cannot be empty</string>
    <string name="generate_rsa_key_pair_builder_toast_2">Key generation failed:</string>

    <string name="prompt_for_password_to_decrypt_hint">Enter decryption password</string>
    <string name="prompt_for_password_to_decrypt_builder_title">Unlock Private Key</string>
    <string name="unlock_button">Unlock</string>
    <string name="prompt_for_password_to_decrypt_toast_1">Private key unlocked</string>
    <string name="prompt_for_password_to_decrypt_toast_2">Wrong password</string>

    <string name="menu_group_contacts">Contacts</string>
    <string name="menu_group_keys">Keys</string>

    <string name="menu_group_files">Files</string>
    <string name="action_encrypt_file">Encrypt File</string>
    <string name="action_decrypt_file">Decrypt File</string>

    <string name="menu_group_messages">Message</string>
    <string name="action_sign_message">Sign Message</string>
    <string name="action_verify_message">Verify Message</string>

    <string name="private_key_not_unlocked">Private key not unlocked!</string>
    <string name="enter_message_to_sign">Enter a message to sign!</string>
    <string name="signed_message_copied">Signed message copied!</string>
    <string name="signing_failed">Failed to sign.</string>
    <string name="select_contact_first">Select a contact first!</string>
    <string name="paste_signed_message">Paste a signed message in the text field!</string>
    <string name="invalid_format_rsa_aes256">Invalid format! Use RSA-AES256 format with boundaries.</string>
    <string name="signature_not_found">Invalid format! Signature not found.</string>
    <string name="empty_message_or_signature">Empty message or signature after extraction!</string>
    <string name="valid_signature">Valid signature! Sender confirmed.</string>
    <string name="invalid_signature">Invalid signature! Sender not confirmed.</string>
    <string name="verification_error">Verification error.</string>
    <string name="message_field_empty">The message field is already empty!</string>
    <string name="clear_message_title">Clear Message</string>
    <string name="clear_message_confirm">Are you sure you want to clear the message text?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="action_clear_message">Clear Text</string>

    <string name="encrypted_file">File encrypted.</string>
    <string name="decrypted_file">File decrypted.</string>
    <string name="please_wait">Please wait…</string>
    <string name="decrypting_file">Decrypting File…</string>
    <string name="encrypting_file">Encrypting File…</string>

    <string name="cannot_paste_message_field_not_empty">Cannot paste: Message field is not empty</string>
    <string name="clipboard_empty">Clipboard is empty</string>

    <string name="encryption_complete_title">Encryption Complete</string>
    <string name="encryption_complete_message">Share file via Intent?</string>
    <string name="save_button">NO</string>
    <string name="share_button">YES</string>

</resources>