<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/menu_group_contacts">
        <menu>
            <item
                android:id="@+id/action_add_contact"
                android:title="@string/add_contact_menu_button" />
            <item
                android:id="@+id/action_remove_contact"
                android:title="@string/remove_contact_menu_button" />
            <item
                android:id="@+id/action_export_contacts"
                android:title="@string/action_export_contacts" />
            <item
                android:id="@+id/action_import_contacts"
                android:title="@string/action_import_contacts" />
        </menu>
    </item>

    <item android:title="@string/menu_group_keys">
        <menu>
            <item
                android:id="@+id/action_show_keys"
                android:title="@string/show_keys_menu_button" />
            <item
                android:id="@+id/action_export_keys"
                android:title="@string/action_export_keys" />
            <item
                android:id="@+id/action_import_keys"
                android:title="@string/action_import_keys" />
        </menu>
    </item>

    <item android:title="@string/menu_group_files">
        <menu>
            <item
                android:id="@+id/action_encrypt_file"
                android:title="@string/action_encrypt_file"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_decrypt_file"
                android:title="@string/action_decrypt_file"
                app:showAsAction="never" />
        </menu>
    </item>

    <item android:title="@string/menu_group_messages">
        <menu>
            <item
                android:id="@+id/action_sign_message"
                android:title="@string/action_sign_message"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_verify_message"
                android:title="@string/action_verify_message"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_clear_message"
                android:title="@string/action_clear_message"
                app:showAsAction="never" />
        </menu>
    </item>

</menu>